// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getPlatformConfig > gets config for platform belgie 1`] = `
{
  "carriers": [
    {
      "addressFields": [
        "postalCode",
        "street",
        "city",
      ],
      "deliveryCountries": [
        "BE",
        "NL",
      ],
      "deliveryTypes": [
        "standard",
      ],
      "features": [
        "showDeliveryDate",
        "deliveryDaysWindow",
        "dropOffDays",
        "dropOffDelay",
      ],
      "name": "bpost",
      "packageTypes": [
        "package",
      ],
      "pickupCountries": [
        "BE",
        "NL",
      ],
      "shipmentOptions": [
        "only_recipient",
        "signature",
      ],
      "subscription": 0,
    },
    {
      "deliveryCountries": [
        "BE",
        "NL",
      ],
      "deliveryTypes": [
        "standard",
      ],
      "features": [
        "showDeliveryDate",
        "deliveryDaysWindow",
        "dropOffDays",
        "dropOffDelay",
      ],
      "name": "postnl",
      "packageTypes": [
        "package",
      ],
      "pickupCountries": [
        "BE",
        "NL",
      ],
      "shipmentOptions": [
        "signature",
      ],
      "subscription": 0,
    },
    {
      "addressFields": [
        "postalCode",
        "street",
        "city",
      ],
      "deliveryCountries": [
        "AT",
        "BE",
        "BG",
        "CZ",
        "DK",
        "EE",
        "FI",
        "FR",
        "DE",
        "GR",
        "HU",
        "IE",
        "IT",
        "LV",
        "LI",
        "LT",
        "LU",
        "NL",
        "PL",
        "PT",
        "RO",
        "SK",
        "SI",
        "ES",
        "SE",
      ],
      "deliveryTypes": [
        "standard",
        "pickup",
      ],
      "features": [
        "dropOffDays",
        "dropOffDelay",
      ],
      "name": "dpd",
      "packageTypes": [
        "package",
      ],
      "pickupCountries": [
        "AT",
        "BE",
        "CZ",
        "DK",
        "EE",
        "FI",
        "FR",
        "DE",
        "HU",
        "LV",
        "LT",
        "LU",
        "NL",
        "PL",
        "PT",
        "SK",
        "SI",
        "ES",
        "GB",
      ],
      "subscription": 0,
    },
  ],
}
`;

exports[`getPlatformConfig > gets config for platform myparcel 1`] = `
{
  "carriers": [
    {
      "addressFields": [
        "postalCode",
        "street",
        "city",
      ],
      "deliveryCountries": [
        "NL",
        "BE",
      ],
      "deliveryTypes": [
        "standard",
        "morning",
        "evening",
        "pickup",
      ],
      "features": [
        "deliveryDaysWindow",
        "dropOffDelay",
        "dropOffDays",
        "showDeliveryDate",
      ],
      "name": "postnl",
      "packageTypes": [
        "package",
        "mailbox",
        "digital_stamp",
      ],
      "pickupCountries": [
        "NL",
        "BE",
      ],
      "shipmentOptions": [
        "only_recipient",
        "signature",
      ],
      "subscription": -1,
    },
    {
      "addressFields": [
        "city",
        "postalCode",
      ],
      "deliveryCountries": [
        "NL",
        "BE",
      ],
      "deliveryTypes": [
        "standard",
      ],
      "features": [
        "allowSameDayDelivery",
        "deliveryDaysWindow",
        "dropOffDelay",
        "dropOffDays",
      ],
      "name": "dhlforyou",
      "packageTypes": [
        "package",
      ],
      "pickupCountries": [
        "NL",
      ],
      "shipmentOptions": [
        "only_recipient",
        "signature",
      ],
      "subscription": -1,
    },
    {
      "deliveryCountries": [
        "BG",
        "DE",
        "EE",
        "FI",
        "GR",
        "HU",
        "IE",
        "IT",
        "HR",
        "LV",
        "LT",
        "LU",
        "AT",
        "PL",
        "PT",
        "RO",
        "SI",
        "SK",
        "ES",
        "CZ",
      ],
      "deliveryTypes": [
        "standard",
        "pickup",
      ],
      "features": [],
      "name": "dhlparcelconnect",
      "packageTypes": [
        "package",
      ],
      "pickupCountries": [
        "BG",
        "DK",
        "DE",
        "EE",
        "FI",
        "FR",
        "GR",
        "HU",
        "IE",
        "IT",
        "HR",
        "LV",
        "LT",
        "LU",
        "AT",
        "PL",
        "PT",
        "RO",
        "SI",
        "SK",
        "ES",
        "CZ",
        "SE",
        "GB",
      ],
      "subscription": -1,
    },
    {
      "deliveryCountries": [
        "BE",
        "BG",
        "DK",
        "DE",
        "EE",
        "FI",
        "FR",
        "GR",
        "HU",
        "IE",
        "IT",
        "HR",
        "LV",
        "LT",
        "LU",
        "NL",
        "AT",
        "PL",
        "PT",
        "RO",
        "SI",
        "SK",
        "ES",
        "CZ",
        "SE",
        "GB",
      ],
      "deliveryTypes": [
        "standard",
      ],
      "features": [],
      "name": "dhleuroplus",
      "packageTypes": [
        "package",
      ],
      "subscription": -1,
    },
    {
      "addressFields": [
        "postalCode",
        "street",
        "city",
      ],
      "deliveryCountries": [
        "BG",
        "DE",
        "EE",
        "FI",
        "GR",
        "HU",
        "IE",
        "IT",
        "HR",
        "LV",
        "LT",
        "LU",
        "AT",
        "PL",
        "PT",
        "RO",
        "SI",
        "SK",
        "ES",
        "CZ",
      ],
      "deliveryTypes": [
        "standard",
      ],
      "fakeDelivery": true,
      "name": "ups",
      "packageTypes": [
        "package",
      ],
      "pickupCountries": [
        "DE",
      ],
      "subscription": 1,
    },
    {
      "addressFields": [
        "postalCode",
        "street",
        "city",
      ],
      "deliveryCountries": [
        "AT",
        "BE",
        "BG",
        "CZ",
        "DK",
        "EE",
        "FI",
        "FR",
        "DE",
        "GR",
        "HU",
        "IE",
        "IT",
        "LV",
        "LI",
        "LT",
        "LU",
        "NL",
        "PL",
        "PT",
        "RO",
        "SK",
        "SI",
        "ES",
        "SE",
      ],
      "deliveryTypes": [
        "standard",
        "pickup",
      ],
      "features": [
        "dropOffDays",
        "dropOffDelay",
      ],
      "name": "dpd",
      "packageTypes": [
        "package",
      ],
      "pickupCountries": [
        "AT",
        "BE",
        "CZ",
        "DK",
        "EE",
        "FI",
        "FR",
        "DE",
        "HU",
        "LV",
        "LT",
        "LU",
        "NL",
        "PL",
        "PT",
        "SK",
        "SI",
        "ES",
        "GB",
      ],
      "subscription": 1,
    },
  ],
}
`;
